fixed contact section spacing

--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -668,6 +668,7 @@ figure.snip1321.hover:after {
 
 section.contact-me {
     border-bottom: none;
+    padding-bottom: 350px;
 }
 
 #contact input {
